Fix card list to end align to left
Without space between cards on the last line

--- a/app/javascript/containers/AdoptionCard/AdoptionCard.sass
+++ b/app/javascript/containers/AdoptionCard/AdoptionCard.sass
@@ -3,7 +3,7 @@
   width: 350px
   height: 500px
   border-radius: 4px
-  margin-top: 30px
+  margin: 10px 10px
 
   .picture
     width: 100%
