--- a/app/javascript/containers/AdoptionList/AdoptionList.sass
+++ b/app/javascript/containers/AdoptionList/AdoptionList.sass
@@ -7,6 +7,6 @@
 
   .adoptionCards
     display: flex
-    justify-content: space-between
+    justify-content: flex-start
     flex-wrap: wrap
 
